# Ai_employee

./: .env.example  .gitignore  CLAUDE.md  DISABLE_TEST_TASKS.bat  ENABLE_TEST_TASKS.bat  FIX_AND_INSTALL_SCHEDULER.bat  README.md  SECURITY.md  STOP_AI_EMPLOYEE.bat  STOP_ALL_WATCHERS.bat  email_mcp_server.py  pyproject.toml  remove_tasks.ps1  remove_tasks_test.ps1  requirements.txt  setup_windows_scheduler.ps1  setup_windows_scheduler_test.ps1
.claude/: settings.json  settings.local.json
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Accounting/: Current_Month.md
AI_Employee_Vault/Briefings/: BRONZE_TIER_VERIFICATION_2026-03-24.md  COMPLETE_VERIFICATION_2026-03-24.md  SILVER_TIER_PROGRESS_2026-03-24.md  TEMPLATE_Monday_Briefing.md
AI_Employee_Vault/Done/: DONE_20260324_233428_PAYMENT_Acme_Supplies_Co_20260324_225700.md  EMAIL_20260325_233731_Hello.md  EMAIL_20260325_235224_test 2.md  EMAIL_20260325_235732_Test 3.md  INBOX_ORIGINAL_20260324_225848_test_bronze_tier_20260324_225622.txt  INBOX_ORIGINAL_20260324_225848_test_invoice_march2026.txt  INBOX_ORIGINAL_20260324_233920_test_complete_verification_20260324_233920.txt
scripts/: approval_executor.py  audit_logger.py  audit_logic.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  orchestrator.py  ralph_wiggum.py  retry_handler.py  scheduler_tasks.py  setup_gmail.py  watchdog.py
session_history/: 2026-03-21_session_001.md  2026-03-26_session_002.md
skills/audit-log/: skill.md
skills/create-plan/: skill.md
skills/exec-plan/: SKILL.md
(+13 files in other folders)
