[project]
name = "ai-employee"
version = "1.0.0"
description = "Personal AI Employee — Bronze Tier (Panaversity Hackathon 0, 2026)"
readme = "README.md"
requires-python = ">=3.13"

[project.dependencies]
python-dotenv = ">=1.0.0"
watchdog = ">=4.0.0"
google-auth = ">=2.28.0"
google-auth-oauthlib = ">=1.2.0"
google-auth-httplib2 = ">=0.2.0"
google-api-python-client = ">=2.120.0"
playwright = ">=1.44.0"
psutil = ">=5.9.0"
requests = ">=2.31.0"
schedule = ">=1.2.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
# Run these with: uv run <script-name>
fs-watcher = "scripts.filesystem_watcher:main"
orchestrator = "scripts.orchestrator:main"
watchdog-monitor = "scripts.watchdog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
